...
        let calendar = Calendar.current
        let year:Int = calendar.component(.year, from:gameFinishTime)
        let month:Int = calendar.component(.month, from:gameFinishTime)
        let day:Int = calendar.component(.day, from:gameFinishTime)
        
        //Database update
        self.tap.setTitle("DONE", for: .normal)
        self.message.text = "Score :" + String(self.totalScore)
        let ref = Database.database().reference()
        gamesPlayed += 1
        
        //Setting gamesPlayed into the perferences
        preferences.set(gamesPlayed, forKey: currentLevelKey)
...
        
        //Initializing sound note image
        soundNote.image = UIImage(named: "movingMusicCircle")
        self.view.addSubview(soundNote)
        
        //Initializing right/left buttons
        let buttonImage = UIImage(named: "tapButton")
        right.setImage(buttonImage, for: .normal)
        left.setImage(buttonImage, for: .normal)
        right.addTarget(self, action:#selector(self.tapRight(_:)),for: .touchUpInside)
        left.addTarget(self, action:#selector(self.tapLeft(_:)),for: .touchUpInside)
        self.view.addSubview(right)
        self.view.addSubview(left)
...
