...
                                <rect key="frame" x="497" y="537" width="200" height="71"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="200" id="Drq-5C-X8I"/>
                                    <constraint firstAttribute="height" constant="71" id="VMF-G1-xye"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="45"/>
                                <state key="normal" title="START">
                                    <color key="titleColor" red="0.23134317994117737" green="0.23138946294784546" blue="0.2313401997089386" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <segue destination="lDo-HC-Lf8" kind="presentation" modalPresentationStyle="fullScreen" id="U1s-Ul-uJJ"/>
                                </connections>
                            </button>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KeP-2e-lCu">
                                <rect key="frame" x="497" y="317" width="200" height="200"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="200" id="JOf-gX-FU6"/>
                                    <constraint firstAttribute="width" constant="200" id="PMg-Mn-Ibp"/>
                                </constraints>
                                <state key="normal" title="Button" image="MainMenu_StartButton"/>
                                <connections>
                                    <segue destination="lDo-HC-Lf8" kind="presentation" modalPresentationStyle="fullScreen" id="mrO-P9-hWj"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5MO-dh-H4M">
                                <rect key="frame" x="836" y="385" width="197" height="200"/>
...
                                    <segue destination="eGU-uj-F7J" kind="presentation" modalPresentationStyle="fullScreen" id="UTD-E8-WXK"/>
                                </connections>
                            </button>
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Gx5-tT-QZu">
                                <rect key="frame" x="250" y="100" width="694.5" height="113"/>
                                <subviews>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="Eah-09-SOo">
                                        <rect key="frame" x="0.0" y="0.0" width="113" height="113"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="113" id="EwY-wK-Q4r"/>
                                            <constraint firstAttribute="width" constant="113" id="HNd-fD-qJy"/>
                                        </constraints>
                                    </imageView>
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xdw-Q3-Vig">
                                <rect key="frame" x="292" y="697" width="100" height="79"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="32"/>
                                <state key="normal" title="Clear">
                                    <color key="titleColor" red="0.2313431799" green="0.23138946290000001" blue="0.2313401997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="ClearButton:" destination="zRe-Jb-N92" eventType="touchUpInside" id="lOD-76-LAH"/>
                                </connections>
                            </button>
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MB3-TY-hXu">
                                <rect key="frame" x="805" y="577" width="97" height="96"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="32"/>
                                <state key="normal" title="Done">
                                    <color key="titleColor" red="0.2313431799" green="0.23138946290000001" blue="0.2313401997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="Done:" destination="7xa-yS-hdQ" eventType="touchUpInside" id="piF-sU-86z"/>
                                    <segue destination="zRe-Jb-N92" kind="presentation" modalPresentationStyle="fullScreen" id="suf-qY-ERh"/>
                                </connections>
...
